--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
+  background-color: #28262C;
+  color: #fff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +17,43 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.header {
+    width: 100%;
+    height: 20%;
+    background-color: #616E5D;
+    padding: 10px;
+}
+
+.header_cont {
+    display: flex;
+    max-width: 1600px;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.links {
+    display: block;
+}
+
+.links ul {
+    margin-bottom: 0px;
+    display: flex;
+    list-style: none;
+    gap: 10px
+}
+
+.links li {
+    display: flex;
+    gap: 10px;
+}
+
+.links a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.header li:not(:last-of-type)::after {
+    content: '|';
 }
