--- a/src/index.css
+++ b/src/index.css
@@ -1,59 +1,79 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 body {
-  background-color: #28262C;
+  background-color: #28262c;
   color: #fff;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .header {
-    width: 100%;
-    height: 20%;
-    background-color: #616E5D;
-    padding: 10px;
+  width: 100%;
+  height: 20%;
+  background-color: #616e5d;
+  padding: 10px;
 }
 
 .header_cont {
-    display: flex;
-    max-width: 1600px;
-    justify-content: space-between;
-    align-items: baseline;
+  display: flex;
+  max-width: 1600px;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 .links {
-    display: block;
+  display: block;
 }
 
 .links ul {
-    margin-bottom: 0px;
-    display: flex;
-    list-style: none;
-    gap: 10px
+  margin-bottom: 0px;
+  display: flex;
+  list-style: none;
+  gap: 10px;
 }
 
 .links li {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .links a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .header li:not(:last-of-type)::after {
-    content: '|';
+  content: '|';
+}
+
+/*Настройка скроллбара*/
+/*Регулировка ширины*/
+::-webkit-scrollbar {
+  width: 7px;
+}
+/*Создание тени для полосы прокрутки*/
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2);
+  background-color: white;
+}
+
+/*Стилизация индикатора прокрутки*/
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: linear-gradient(180deg, #795bab, #52849f);
 }
