--- a/src/components/Analytics/AnalyticsDashboard.css
+++ b/src/components/Analytics/AnalyticsDashboard.css
@@ -5,7 +5,7 @@ body {
 
 /* Заголовки */
 h1 {
-  color: #ffffff !important;
+  color: #ffffff;
 }
 .lead.text-muted {
   color: #ff6666 !important; /* Бордово-красный */
