--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -10,11 +10,11 @@ body {
 
 .about-section h1 {
   text-align: center;
-  color: #ca9502;
+  color: #ca9502 !important;
 }
 
 .about-section h2 {
-  color: #ca9502;
+  color: #ca9502 !important;
 }
 
 .about-section ul {
