--- a/src/components/SensorList/SensorList.css
+++ b/src/components/SensorList/SensorList.css
@@ -25,7 +25,7 @@
   width: 500px;
   grid-template-columns: 1fr;
   border-radius: 26px;
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: rgba(255, 255, 255, 0.15) !important;
   padding: 2%;
 }
 
@@ -53,7 +53,7 @@
 .container_data li .title {
   font-size: 19px;
   text-transform: uppercase;
-  color: #ecbf42;
+  color: #ecbf42 !important;
   margin-bottom: 5px;
   margin-right: 10px;
   flex-grow: 0;
