--- a/src/components/Dashboard/OverviewDashboard.css
+++ b/src/components/Dashboard/OverviewDashboard.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 .text-primary {
-  font-size: 2rem;
+  font-size: 1.65rem;
   text-align: center;
   color: #b8b5b5 !important;
 }
@@ -46,10 +46,6 @@ h1 {
   transition: transform 0.4s;
 }
 
-.card:hover {
-  transform: scale(1.05);
-}
-
 .card h3 {
   font-size: 1.5rem;
   margin-bottom: 10px;
@@ -73,4 +69,8 @@ h1 {
   padding: 15px;
   border-radius: 5px;
   margin-top: 20px;
+}
+
+.display-4 {
+  color: #000;
 }
